Fix sign alignment (#39)
* Added dylan's link

* Fixed sign alignment

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -22,7 +22,7 @@
 }
 
 .home-email-input {
-    width: 23rem;
+    width: 34rem;
     padding: 0.5rem;
 
     font-family: var(--main-font);
@@ -33,8 +33,12 @@
     background-color: transparent;
 }
 
+.home-button-img-group {
+    position: relative;
+}
+
 .home-email-line {
-    width: 24rem;
+    width: 35rem;
     display: block;
 }
 
@@ -42,12 +46,16 @@
     width: 22rem;
     height: 7rem;
     margin-top: -0.1rem;
+    margin-left: -11rem;
+    position: absolute;
+    top: 4.5rem;
+    left: 50%;
     border: none;
 
     display: block;
     font-family: var(--title-font);
-    font-size: 1.5rem;
-    background-image: url('../images/graphics/sign-board.svg');
+    font-size: 1.75rem;
+    background: none;
     background-repeat: no-repeat;
     background-color: transparent;
     color: var(--text-3);
